# appledict2html

./: LICENSE  changelog.md  main.py  pyproject.toml  readme.md
.github/workflows/: build.yaml
appledict2html/helpers/: io_utils.py  process_definition_phrases.py  process_html.py  process_main_definition.py  wrapinbrackets.py
appledict2semantic/: main.py
appledict2semantic/helpers/: class_check.py  cleanup.py  io_utils.py  process_definition_phrases.py  process_html.py  process_main_definition.py  span_converters.py  wrapinbrackets.py
